SSO-114 updated swagger docs for get all authorized clients route
